feat: added review form, favorite capabilities

--- a/restaurant.html
+++ b/restaurant.html
@@ -60,6 +60,23 @@
     <!-- Beginning reviews -->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
+      <div>
+        <form action="#" id="f-review-form">
+          <label for="f-review-name"> Enter your Name </label>
+          <input id="f-review-name" type="text">
+          <label for="f-review-rating"> Select your rating </label>
+          <select id="f-review-rating">
+            <option value="1"> 1 start </option>
+            <option value="2"> 2 start </option>
+            <option value="3"> 3 start </option>
+            <option value="4"> 4 start </option>
+            <option value="5"> 5 start </option>
+          </select>
+          <label for="f-review-comment"> Enter your Comment </label>
+          <input id="f-review-comment" type="text">
+          <input type="submit" value="submit">
+        </form>
+      </div>
     </section>
     <!-- End reviews -->
   </main>
